--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,16 +1,15 @@
-<main>
-  <h1>Browser</h1>
-  <form action="/" method="POST">
-    <input type="text" class="search" name="search" placeholder="Search...">
-    <input type="number" name="from" class="difficulty" placeholder="Difficulty from...">
-    <span>-</span>
-    <input type="number" name="to" class="difficulty" placeholder="Difficulty to...">
-    <input type="submit" value="search">
-  </form>
-
-  {{#each cubes}}
-  {{>cube}}
-  {{else}}
-  <h1>No Cubes are added yet</h1>
-  {{/each}}
-</main>
+<section class="py-5 bg-image-full"
+  style="background-image: url('https://web-assets.cdn.dealersolutions.com.au/modular.multisite.dealer.solutions/wp-content/uploads/2018/03/17144131/Ford_Ranger_2-1900x1080.jpg'); background-repeat: no-repeat;">
+  <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
+  <div style="height: 70vh;"></div>
+</section>
+<section class="py-5">
+  <div class="container">
+    <h1>SharedTripp</h1>
+    <div>
+      <p class="lead" style="font-size: 24px; font-style: italic;">"Because the greatest part of a road trip
+        isn't arriving at your destination. It's all the wild stuff that happens along the way..."
+      </p>
+    </div>
+  </div>
+</section>
