--- a/views/404.hbs
+++ b/views/404.hbs
@@ -1,7 +1,8 @@
-<main>
-    <img id="sadFaceImg"
-        src="https://imageog.flaticon.com/icons/png/512/42/42901.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF"
-        alt="sad face" />
-    <h1>404</h1>
-    <h2>Page not found</h2>
-</main>
+<div class="py-5">
+    <div class="container">
+        <img style="display: block; margin: 0 auto; max-width: 800px;"
+            src="https://www.trzcacak.rs/myfile/detail/338-3383238_road-closed-ahead-sign-road-closed-sign.png" />
+        <h1 style="width: 100%; text-align: center; font-weight: bold;">404</h1>
+        <h2 style="width: 100%; text-align: center; text-decoration: underline;">NOT FOUND</h2>
+    </div>
+</div>
