--- a/views/authLogin.hbs
+++ b/views/authLogin.hbs
@@ -1,13 +1,22 @@
-<main>
-    <h1>Login Form</h1>
-    <div class="form">
-        <form action='/auth/login' method="POST">
-            <label for="username">Email</label>
-            <input type="text" id="username" name="email">
-
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password">
-            <input type="submit" value="Login">
-        </form>
+<section class="py-5">
+    <div class="container">
+        <h1 style="margin: 2%; text-align: center;">Login</h1>
+        <div style="padding: 5%;">
+            <form action='/auth/login' method="POST">
+                <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp"
+                        placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <p>Not registered yet? <a href="/auth/register">Register Now!</a></p>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </div>
-</main>
+</section>
