--- a/views/authRegister.hbs
+++ b/views/authRegister.hbs
@@ -1,16 +1,27 @@
-<main>
-    <h1>Register Form</h1>
-    <div class="form">
-        <form action='/auth/register' method="POST">
-            <label for="email">Email</label>
-            <input type="text" id="username" name="email">
-
-            <label for="password">Password</label>
-            <input type="password" id="password" name="password">
-
-            <label for="repeatPassword">Re-Password</label>
-            <input type="password" id="repeatPassword" name="rePassword">
-            <input type="submit" value="Register">
-        </form>
+<section class="py-5">
+    <div class="container">
+        <h1 style="margin: 2%; text-align: center;">Register</h1>
+        <div style="padding: 5%;">
+            <form action='/auth/register' method="POST">
+                <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp"
+                        placeholder="Enter email">
+                </div>
+                <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" name="password" class="form-control" id="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <label for="rePassword">Re-Password</label>
+                    <input type="password" name="rePassword" class="form-control" id="rePassword"
+                        placeholder="Re-Password">
+                </div>
+                <div class="form-group">
+                    <p>Already have account? <a href="/auth/login">Login Now!</a></p>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
     </div>
-</main>
+</section>
